@@ -1,5 +1,5 @@
 $ ->
   $("body").on "click", "[data-behaviour~=perform-health-check]", (e) ->
-    $(this).addClass("hidden")
-    $(this).next("[data-behaviour~=performing-health-check]").removeClass("hidden")
+    $(this).addClass("is-hidden")
+    $(this).next("[data-behaviour~=performing-health-check]").removeClass("is-hidden")
 
