@@ -12,3 +12,4 @@ v 0.0.1 (unreleased)
 * Add Two Factor Authentication (jvanbaarsen)
 * Add a LICENSE file (jvanbaarsen)
 * Load gravatars over SSL (jvanbaarsen)
+* Ensure Healthcheck page has proper styling (jvanbaarsen)
